@@ -33,6 +33,15 @@
       </description>
     </function>
 
+    <function name="$chisq" section="access" output="scalar">
+      <description>
+	<para>
+	  Returns the overall chi-square statistic from the last estimated
+	  model, if available.
+	</para>
+      </description>
+    </function>
+
     <function name="$coeff" section="access" output="scalar" altout="matrix">
       <fnargs>
 	<fnarg optional="true" type="coeffname">s</fnarg>
@@ -108,6 +117,15 @@
       <description>
 	<para>
 	  Returns the error sum of squares of the last estimated model.
+	</para>
+      </description>
+    </function>
+
+    <function name="$Fstat" section="access" output="scalar">
+      <description>
+	<para>
+	  Returns the overall F-statistic from the last estimated model,
+	  if available.
 	</para>
       </description>
     </function>
