@@ -57,6 +57,8 @@ typedef enum {
     M_HQC,        /* Hannan-Quinn criterion */
     M_TRSQ,       /* T * R-squared, last model */
     M_DWPVAL,     /* Durbin-Watson p-value, last model */
+    M_FSTT,       /* overall F-statistic, last model */
+    M_CHISQ,      /* overall chi-square stat, last model */   
     M_SCALAR_MAX, /* -- separator, scalars/series -- */
     M_UHAT,       /* residuals */
     M_YHAT,       /* fitted values */
